--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2024"
 
 [dependencies]
 clap = "4.5.45"
+nonempty = "0.12.0"
 thiserror = "2.0.16"
 tokio = { version = "1.47.1", features = ["full"] }
