--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ clap = "4.5.45"
 nonempty = "0.12.0"
 thiserror = "2.0.16"
 tokio = { version = "1.47.1", features = ["full"] }
+serde = { version = "1.0", features = ["derive"] }
+toml = "0.9.5"
