--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ thiserror = "2.0.16"
 tokio = { version = "1.47.1", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 toml = "0.9.5"
+tracing = "0.1.41"
+tracing-subscriber = "0.3.19"
