--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ serde = { version = "1.0", features = ["derive"] }
 toml = "0.9.5"
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
+which = "8.0.0"
